[package]
name = "klsyn"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.9", default-features = false }

[dev-dependencies]
hound = "3.5"
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }

[features]
strum = ["dep:strum"]

[dependencies.strum]
version = "0.27"
optional = true
features = ["strum_macros", "derive"]
